# trading

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
trading/analysis/scripts/build_snapshots/: bar_window.ml  bar_window.mli  build_runner.ml  build_runner.mli  build_snapshots.ml  dune  universe_loader.ml  universe_loader.mli
trading/analysis/technical/weekly_indicators/: dune  dune-project  weekly_indicators.opam
trading/base/matchers/: dune-project  matchers.opam
trading/base/matchers/lib/: dune  matchers.ml  matchers.mli
trading/base/matchers/test/: dune  test_matchers.ml
trading/devtools/cc_linter/test/: dune  test_no_overwrite.ml
trading/devtools/checks/: _check_lib.sh  agent_compliance_check.sh  agent_compliance_test.sh  arch_layer_test.sh  budget_rollup_check.sh  consolidate_day_check.sh  deep_scan.sh  deep_scan_arch_graph_check.sh  deep_scan_drift_coverage_check.sh  deep_scan_linter_expiry_check.sh  deep_scan_recent_commits_check.sh  deep_scan_stale_bookmarks_check.sh  deep_scan_trends_check.sh  dune  extract_metrics_gate_smoke.sh  fmt_check.sh  index_size_linter.sh  jj_workspace_smoke.sh  linter_exceptions.conf  linter_file_length.sh  linter_magic_numbers.sh  linter_mli_coverage.sh  no_python_check.sh  orchestrator_plan_check.sh  perf_catalog_check.sh  posix_sh_check.sh  posix_sh_check_test.sh  record_qc_audit.sh  record_qc_audit_test.sh  rule_promotion_check.sh  rule_promotion_self_test.sh  status_file_integrity.sh  sweep_worktrees_smoke.sh  testing_only_check.sh  write_audit.sh
trading/devtools/checks/deep_scan/: _lib.sh  check_01_dead_code.sh  check_02_design_doc_drift.sh  check_03_todo_fixme.sh  check_04_size_violations.sh  check_05_followup_items.sh  check_06_qc_calibration.sh  check_07_harness_scaffolding.sh  check_08_trends.sh  check_09_arch_graph.sh  check_10_status_template.sh  check_11_linter_expiry.sh  check_12_stale_bookmarks.sh  main.sh
trading/trading/backtest/bar_loader/: bar_loader.ml  bar_loader.mli  dune  full_compute.ml  full_compute.mli  shadow_screener.ml  shadow_screener.mli  summary_compute.ml  summary_compute.mli
trading/trading/backtest/diag/: diag_panel_vs_snapshot_extended.ml  dune
trading/trading/backtest/lib/: backtest_progress.ml  backtest_progress.mli  bar_data_source.ml  bar_data_source.mli  comparison.ml  comparison.mli  config_override.ml  config_override.mli  csv_snapshot_builder.ml  csv_snapshot_builder.mli  dune  fold_health.ml  fold_health.mli  fold_health_runner.ml  fold_health_runner.mli  force_liquidation_log.ml  force_liquidation_log.mli  fuzz_distribution.ml  fuzz_distribution.mli  fuzz_spec.ml  fuzz_spec.mli  gc_trace.ml  gc_trace.mli  macro_trend_writer.ml  macro_trend_writer.mli  overlay_validator.ml  overlay_validator.mli  panel_runner.ml  panel_runner.mli  panel_step_loop.ml  panel_step_loop.mli  panel_strategy_builder.ml  panel_strategy_builder.mli  panel_strategy_wrapper.ml  panel_strategy_wrapper.mli  reconciler_writer.ml  reconciler_writer.mli  result_writer.ml  result_writer.mli  runner.ml  (+29 more)
trading/trading/backtest/scenarios/: bar_source_resolver.ml  bar_source_resolver.mli  dune  fixtures_root.ml  fixtures_root.mli  scenario.ml  scenario.mli  scenario_progress.ml  scenario_progress.mli  scenario_runner.ml  smoke_catalog.ml  smoke_catalog.mli  universe_file.ml  universe_file.mli  universe_snapshot.ml  universe_snapshot.mli
trading/trading/backtest/snapshot_warehouse/: build_scenario_snapshots.ml  dune  scenario_snapshot_plan.ml  scenario_snapshot_plan.mli  twin_detector.ml  twin_detector.mli
trading/trading/backtest/test/: csv_snapshot_builder_cleanup_subject.ml  diag_real_csv_parity.ml  dune  test_backtest_progress.ml  test_backtest_runner_args.ml  test_bah_runner_e2e.ml  test_comparison.ml  test_config_override.ml  test_csv_snapshot_builder_cleanup.ml  test_determinism.ml  test_fold_health.ml  test_fold_health_runner.ml  test_fuzz_distribution.ml  test_fuzz_spec.ml  test_gc_trace.ml  test_macro_trend_writer.ml  test_panel_loader_parity.ml  test_panel_runner_active_through.ml  test_panel_runner_cost_model.ml  test_panel_runner_gc_trace.ml  test_release_perf_report.ml  test_result_writer.ml  test_runner_filter.ml  test_runner_hypothesis_overrides.ml  test_runner_tiered_cycle.ml  test_runner_tiered_metadata_tolerance.ml  test_runner_tiered_skeleton.ml  test_smoke_catalog.ml  test_snapshot_mode_parity.ml  test_snapshot_mode_strategy_parity.ml  test_stop_log.ml  test_tiered_loader_parity.ml  test_trace.ml  test_trade_audit.ml  test_trade_audit_capture.ml  test_trade_audit_html_report.ml  test_trade_audit_ratings.ml  test_trade_audit_report.ml  test_trade_context.ml  test_trade_score.ml
trading/trading/data_panel/: atr_kernel.ml  atr_kernel.mli  bar_panels.ml  bar_panels.mli  dune  ema_kernel.ml  ema_kernel.mli  get_indicator_adapter.ml  get_indicator_adapter.mli  indicator_panels.ml  indicator_panels.mli  indicator_spec.ml  indicator_spec.mli  ohlcv_panels.ml  ohlcv_panels.mli  panel_snapshot.ml  panel_snapshot.mli  rsi_kernel.ml  rsi_kernel.mli  sma_kernel.ml  sma_kernel.mli  symbol_index.ml  symbol_index.mli
trading/trading/data_panel/test/: atr_kernel_test.ml  bar_panels_test.ml  calendar_aware_load_test.ml  dune  ema_kernel_test.ml  get_indicator_adapter_test.ml  indicator_panels_test.ml  ohlcv_panels_test.ml  panel_snapshot_test.ml  rsi_kernel_test.ml  sma_kernel_test.ml  symbol_index_test.ml
trading/trading/engine/test/: dune  test_buffer_pool.ml  test_engine.ml  test_price_path.ml  test_price_path_buffer_reuse.ml  test_types.ml
trading/trading/portfolio/lib/: calculations.ml  calculations.mli  dune  manager.ml  manager.mli  margin_config.ml  margin_config.mli  portfolio.ml  portfolio.mli  portfolio_cash_floor.ml  portfolio_cash_floor.mli  portfolio_margin.ml  portfolio_margin.mli  short_margin_tiers.ml  short_margin_tiers.mli  split_event.ml  split_event.mli  types.ml  types.mli
trading/trading/portfolio/test/: dune  test_calculations.ml  test_fifo.ml  test_manager.ml  test_margin_accounting.ml  test_portfolio.ml  test_short_margin_tiers.ml  test_split_event.ml  test_types.ml
(+5985 files in other folders)
