(lang dune 3.0)

(name matchers)

(generate_opam_files true)

(package
 (name matchers)
 (synopsis "Testing utilities for Result types with OUnit2")
 (description
  "Provides a fluent matcher API for testing Result and Option types in OCaml with OUnit2. Includes matchers like is_ok_and_holds, is_error, is_some_and, and combinators for cleaner test assertions.")
 (depends
  (ocaml
   (>= 5.2.0))
  core
  ounit2
  status))
