; Codebase-wide structural checks. Run as part of `dune runtest`.
; Each check is a shell script that fails fast with a clear message.
; Path exceptions are declared in linter_exceptions.conf.
;
; Shell scripts source trading/devtools/checks/_check_lib.sh for the
; shared repo_root / trading_dir / die helpers. Rules that run those
; scripts must declare _check_lib.sh as a dep so dune sandboxes it
; alongside the script; the script's `. "$(dirname "$0")/_check_lib.sh"`
; then finds it at the sandboxed location.

; Architecture layer boundary: analysis/ must not import trading/trading/

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:arch_layer_test.sh} %{dep:linter_exceptions.conf})))

; File length: 300-line soft limit, 500-line declared-large limit (11% cap)

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:linter_file_length.sh})))

; .mli coverage: every lib/*.ml must have a matching .mli

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:linter_mli_coverage.sh} %{dep:linter_exceptions.conf})))

; Magic numbers: numeric literals must be routed through config records

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:linter_magic_numbers.sh} %{dep:linter_exceptions.conf})))

; Function length: no top-level function body may exceed 50 lines (AST-based)

(rule
 (alias runtest)
 (action
  (run %{exe:../fn_length_linter/fn_length_linter.exe} %{workspace_root})))

; Formatting gate: all .ml/.mli files must be formatted with ocamlformat

(rule
 (alias runtest)
 (action
  (run sh %{dep:fmt_check.sh})))

; Nesting depth: fn avg > 3.0 or max > 5, file avg > 2.5 → FAIL (AST-based)
; Exempt a function with (* @nesting-ok: reason *) before the let keyword.

(rule
 (alias runtest)
 (action
  (run
   %{exe:../nesting_linter/nesting_linter.exe}
   %{workspace_root}
   %{dep:linter_exceptions.conf})))

; @testing-only enforcement: libraries annotated "; @testing-only" must not
; appear in (library ...) stanza dependencies — only (test ...) / (tests ...)

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:testing_only_check.sh})))

; Agent definition compliance: every feat-*.md must have required sections.
; Reaches .claude/agents/ at the repo root via repo_root() in _check_lib.sh,
; which walks up from the sandboxed script's directory looking for .git.

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:agent_compliance_check.sh})))

; Status file integrity: each dev/status/*.md must declare Status, Last updated,
; and (for feature files) Interface stable. Invoked by health-scanner fast scan.
; dev/status/ lives at the repo root (above trading/), outside the dune
; workspace — the script uses repo_root (git rev-parse) from _check_lib.sh
; to find it.

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:status_file_integrity.sh})))

; Orchestrator plan-mode contract: verify lead-orchestrator.md has the
; required Plan Mode section + --plan trigger + output path docs. Structural
; check only — we do not invoke `claude -p` from dune runtest (credentials,
; network, flakiness).

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:orchestrator_plan_check.sh})))

; Cyclomatic complexity: CC > 10 = warning (not failure); exits 0 always.
; To generate the per-function JSON for trend analysis, run:
;   cc_linter <trading-root> <path-to-dev/metrics/cc-YYYY-MM-DD.json>

(rule
 (alias runtest)
 (action
  (run %{exe:../cc_linter/cc_linter.exe} %{workspace_root})))
