; Codebase-wide structural checks. Run as part of `dune runtest`.
; Each check is a shell script that fails fast with a clear message.
; Path exceptions are declared in linter_exceptions.conf.
;
; Shell scripts source trading/devtools/checks/_check_lib.sh for the
; shared repo_root / trading_dir / die helpers. Rules that run those
; scripts must declare _check_lib.sh as a dep so dune sandboxes it
; alongside the script; the script's `. "$(dirname "$0")/_check_lib.sh"`
; then finds it at the sandboxed location.

; Architecture layer boundary: analysis/ must not import trading/trading/

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:arch_layer_test.sh} %{dep:linter_exceptions.conf})))

; File length: 300-line soft limit, 500-line declared-large limit (11% cap)

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:linter_file_length.sh})))

; .mli coverage: every lib/*.ml must have a matching .mli

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:linter_mli_coverage.sh} %{dep:linter_exceptions.conf})))

; Magic numbers: numeric literals must be routed through config records

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:linter_magic_numbers.sh} %{dep:linter_exceptions.conf})))

; Function length: no top-level function body may exceed 50 lines (AST-based)

(rule
 (alias runtest)
 (action
  (run %{exe:../fn_length_linter/fn_length_linter.exe} %{workspace_root})))

; Formatting gate: all .ml/.mli files must be formatted with ocamlformat

(rule
 (alias runtest)
 (action
  (run sh %{dep:fmt_check.sh})))

; Nesting depth: fn avg > 3.0 or max > 5, file avg > 2.5 → FAIL (AST-based)
; Exempt a function with (* @nesting-ok: reason *) before the let keyword.

(rule
 (alias runtest)
 (action
  (run
   %{exe:../nesting_linter/nesting_linter.exe}
   %{workspace_root}
   %{dep:linter_exceptions.conf})))

; @testing-only enforcement: libraries annotated "; @testing-only" must not
; appear in (library ...) stanza dependencies — only (test ...) / (tests ...)

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:testing_only_check.sh})))

; Agent definition compliance: every feat-*.md must have required sections,
; AND every jj-writing agent (feat-*, harness-maintainer, ops-data) must have
; ## Pre-Work Setup. Read-only QC agents are exempt from the Pre-Work Setup rule.
; Reaches .claude/agents/ at the repo root via repo_root() in _check_lib.sh,
; which walks up from the sandboxed script's directory looking for .git.

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:agent_compliance_check.sh})))

; Smoke test for agent_compliance_check.sh: verifies (1) the as-checked-in tree
; passes both Rule 1 (core sections) and Rule 2 (Pre-Work Setup), and (2) a
; temp copy of feat-data.md with ## Pre-Work Setup stripped causes the check to FAIL.

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:agent_compliance_test.sh})))

; jj workspace boilerplate smoke test: execs the canonical Pre-Work Setup
; boilerplate (jj workspace add + verify + cleanup) against a tmp-dir target.
; Skips cleanly if jj is not on PATH (GHA runners don't have jj installed).
; Pins the runtime semantics of the boilerplate so a future jj syntax change
; breaks CI rather than silently breaking agent dispatches.

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:jj_workspace_smoke.sh})))

; Status file integrity: each dev/status/*.md must declare Status, Last updated,
; and (for feature files) Interface stable. Invoked by health-scanner fast scan.
; dev/status/ lives at the repo root (above trading/), outside the dune
; workspace — the script uses repo_root (git rev-parse) from _check_lib.sh
; to find it.

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:status_file_integrity.sh})))

; Orchestrator plan-mode contract: verify lead-orchestrator.md has the
; required Plan Mode section + --plan trigger + output path docs. Structural
; check only — we do not invoke `claude -p` from dune runtest (credentials,
; network, flakiness).

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:orchestrator_plan_check.sh})))

; Cyclomatic complexity: CC > 10 = warning (not failure); exits 0 always.
; To generate the per-function JSON for trend analysis, run:
;   cc_linter <trading-root> dev/metrics/cc-latest.json
; (deep_scan.sh writes to the same rolling file on each run.)

(rule
 (alias runtest)
 (action
  (run %{exe:../cc_linter/cc_linter.exe} %{workspace_root})))

; Deep scan Trends section (T3-G): structural smoke test.
; Verifies deep_scan.sh contains the Check 8 Trends implementation
; and that the most-recent deep scan report has ## Trends.
; Does NOT run deep_scan.sh (weekly tool, not a per-PR gate).

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:deep_scan_trends_check.sh})))

; Deep scan Architecture Graph section (T3-F): structural smoke test.
; Verifies deep_scan.sh contains the Check 9 Architecture Graph
; implementation (R2 + R3 monitored rules) and that the most-recent
; deep scan report has ## Architecture Graph.
; Does NOT run deep_scan.sh (weekly tool, not a per-PR gate).

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:deep_scan_arch_graph_check.sh})))

; Deep scan Status File Template section (harness gap sub-item 2): structural smoke test.
; Verifies deep_scan.sh contains the Check 10 implementation (forbidden
; ## Recent Commits heading detection) and that the most-recent deep scan
; report has ## Status File Template.
; Does NOT run deep_scan.sh (weekly tool, not a per-PR gate).

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:deep_scan_recent_commits_check.sh})))

; Deep scan Linter Exception Expiry section (harness gap sub-item 3, T1-K):
; structural smoke test. Verifies deep_scan.sh contains the Check 11
; implementation (review_at expiry detection against milestones/dates) and
; that the most-recent deep scan report has ## Linter Exception Expiry.
; Does NOT run deep_scan.sh (weekly tool, not a per-PR gate).

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:deep_scan_linter_expiry_check.sh})))

; Deep scan Stale Local Bookmarks section (harness gap sub-item 4): structural smoke test.
; Verifies deep_scan.sh contains the Check 12 stale-bookmark detection markers
; and that the most-recent deep scan report has ## Stale Local Bookmarks.
; Does NOT run deep_scan.sh (weekly tool, not a per-PR gate).

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:deep_scan_stale_bookmarks_check.sh})))

; Deep scan drift coverage extension (harness gap sub-item 1): structural smoke test.
; Verifies check_02_design_doc_drift.sh contains the backtest subsystem drift
; check (trading/trading/backtest/ vs backtest-scale-optimization-2026-04-17.md)
; and that the most-recent deep scan report has a drift metrics entry.
; Does NOT run deep_scan.sh (weekly tool, not a per-PR gate).

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:deep_scan_drift_coverage_check.sh})))

; Same-day summary consolidation smoke test: generates a 3-run fixture in /tmp/,
; runs dev/lib/consolidate_day.sh, and verifies deduped output sections.
; Does NOT touch real dev/daily/ files.

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:consolidate_day_check.sh})))

; Rule promotion check (T3-F): verify every Lifecycle: enforced rule in
; docs/design/dependency-rules.md has a corresponding check script that
; exists on disk and is referenced by this dune file.
; Degrades gracefully if the doc is absent (prints WARNING, exits 0).

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:rule_promotion_check.sh})))

; Self-test for rule_promotion_check.sh: exercises pass, fail (missing script),
; fail (missing dune wiring), and implicit-enforcement cases in isolation.

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:rule_promotion_self_test.sh})))

; Budget rollup smoke test: uses temp-dir fixtures to verify dev/lib/budget_rollup.sh
; handles single records, multi-record sums, date range filtering, missing dir,
; invalid dates, and empty-range cases. Does NOT touch real dev/budget/ data.

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:budget_rollup_check.sh})))

; POSIX shell portability linter: runs `dash -n` over #!/bin/sh scripts in
; trading/devtools/checks/, trading/devtools/checks/deep_scan/, and dev/lib/.
; Scripts with #!/usr/bin/env bash shebang are exempt (intentionally bash).
; Catches parse-time bash-isms: arrays arr=(...), here-strings <<<, process
; substitution <(...). Introduced to prevent the class of rework that hit
; PR #483 (bash-isms in scripts expected to run under sh in GHA devcontainer).

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:posix_sh_check.sh})))

; Smoke test for posix_sh_check.sh: verifies the linter exits non-zero on a
; known-bad bash-array fixture, exits 0 on a clean POSIX sh script, and exits 0
; on a !/usr/bin/env bash script (exemption check).

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:posix_sh_check_test.sh})))

; No-Python enforcement: fails if any *.py file exists in the repo (outside
; .git/, _build/, node_modules/, vendor/, .devcontainer/). The two previously
; grandfathered scripts (perf_sweep_report.py, perf_hypothesis_report.py) were
; deleted in cleanup/no-more-python when the Legacy loader_strategy was removed.
; See .claude/rules/no-python.md for the policy.

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (run sh %{dep:no_python_check.sh})))

; Perf-catalog integrity check: verifies every scenario sexp under
; trading/test_data/backtest_scenarios/{goldens-small,goldens-broad,perf-sweep,smoke}/
; carries a [;; perf-tier: <1|2|3|4>] header line, AND that paths
; referenced from .github/workflows/perf-tier1.yml exist on disk and
; carry [;; perf-tier: 1].
;
; Strict by default — every catalog scenario MUST carry a tier tag.
; Initially landed annotate-only (PR #574); flipped to STRICT alongside
; the perf-tier1.yml continue-on-error: false flip on 2026-04-28 so
; that adding a new scenario without a tier tag fails the build rather
; than silently drifting. See
; dev/plans/perf-scenario-catalog-2026-04-25.md §"Decision items" #3
; and dev/status/backtest-perf.md next-step #4.

(rule
 (alias runtest)
 (deps _check_lib.sh)
 (action
  (setenv
   PERF_CATALOG_CHECK_STRICT
   1
   (run sh %{dep:perf_catalog_check.sh}))))
