(library
 (name data_panel)
 (public_name trading.data_panel)
 (libraries
  bigarray
  core
  core_unix
  core_unix.sys_unix
  csv
  fpath
  indicators.time_period
  status
  trading.strategy
  types
  unix
  weinstein.snapshot_runtime)
 (preprocess
  (pps ppx_compare ppx_deriving.eq ppx_hash ppx_let ppx_sexp_conv)))
