(library
 (name universe_loader)
 (modules universe_loader)
 (libraries core status universe)
 (preprocess
  (pps ppx_jane)))

(library
 (name bar_window)
 (modules bar_window)
 (libraries core types)
 (preprocess
  (pps ppx_jane)))

(executable
 (name build_snapshots)
 (modules build_snapshots)
 (libraries
  core
  core_unix
  core_unix.command_unix
  core_unix.filename_unix
  status
  trading.data_panel.snapshot
  bar_window
  universe_loader
  weinstein.snapshot_pipeline
  csv)
 (preprocess
  (pps ppx_jane)))
