(library
 (name universe_loader)
 (modules universe_loader)
 (libraries core status universe)
 (preprocess
  (pps ppx_jane)))

(library
 (name bar_window)
 (public_name scripts.bar_window)
 (modules bar_window)
 (libraries core types)
 (preprocess
  (pps ppx_jane)))

(library
 (name build_runner)
 (public_name scripts.build_runner)
 (modules build_runner)
 (libraries
  core
  core_unix
  status
  types
  fpath
  trading.data_panel.snapshot
  bar_window
  weinstein.snapshot_pipeline
  csv)
 (preprocess
  (pps ppx_jane)))

(executable
 (name build_snapshots)
 (modules build_snapshots)
 (libraries
  core
  core_unix
  core_unix.command_unix
  status
  universe_loader
  build_runner)
 (preprocess
  (pps ppx_jane)))
