(lang dune 3.0)
(name weekly_indicators)
(version 0.1.0)

(generate_opam_files true)

(package
 (name weekly_indicators)
 (synopsis "Weekly technical indicators for trading analysis")
 (description "Implementation of technical indicators on weekly timeframes")
 (depends
  (ocaml (>= 4.14.0))
  (dune (>= 3.0))
  (unix (>= 0.1.0))
  (ounit2 :with-test)))
