(library
 (public_name trading.backtest.bar_loader)
 (name bar_loader)
 (libraries
  core
  fpath
  status
  types
  trading.simulation.data
  csv
  indicators.time_period
  indicators.relative_strength
  indicators.atr
  indicators.sma
  weinstein.stage
  weinstein.rs
  weinstein.volume
  weinstein.stock_analysis
  weinstein.screener
  weinstein.types)
 (preprocess
  (pps ppx_let ppx_sexp_conv ppx_deriving.show ppx_deriving.eq)))
