(library
 (name backtest)
 (libraries
  core
  core_unix
  fpath
  weinstein.data_source
  trading.backtest.loader_strategy
  trading.data_panel
  trading.base
  trading.engine
  trading.simulation
  trading.simulation.types
  trading.strategy
  weinstein_trading.strategy
  weinstein.macro)
 (preprocess
  (pps ppx_let ppx_sexp_conv ppx_deriving.show ppx_deriving.eq)))
