(library
 (name backtest)
 (libraries
  core
  core_unix
  fpath
  weinstein.data_source
  trading.data_panel
  trading.base
  trading.engine
  trading.simulation
  trading.simulation.types
  trading.strategy
  weinstein_trading.strategy
  weinstein_trading.portfolio_risk
  weinstein.macro
  weinstein.resistance
  weinstein.rs
  weinstein.screener
  weinstein.support
  weinstein.types
  weinstein.volume)
 (preprocess
  (pps ppx_let ppx_sexp_conv ppx_deriving.show ppx_deriving.eq)))
