(library
 (name backtest)
 (libraries
  core
  core_unix
  csv
  fpath
  status
  types
  weinstein.data_source
  trading.data_panel.snapshot
  trading.base
  trading.engine
  trading.simulation
  trading.simulation.data
  trading.simulation.types
  trading.strategy
  weinstein.snapshot_pipeline
  weinstein.snapshot_runtime
  weinstein_trading.strategy
  weinstein_trading.portfolio_risk
  weinstein.macro
  weinstein.resistance
  weinstein.rs
  weinstein.screener
  weinstein.support
  weinstein.types
  weinstein.volume)
 (preprocess
  (pps ppx_let ppx_sexp_conv ppx_deriving.show ppx_deriving.eq)))
