(library
 (name scenario_lib)
 (modules scenario universe_file fixtures_root smoke_catalog)
 (libraries core fpath weinstein.data_source)
 (preprocess
  (pps ppx_sexp_conv)))

(executable
 (name scenario_runner)
 (modules scenario_runner)
 (libraries
  core
  core_unix
  fpath
  weinstein.data_source
  trading.simulation
  trading.simulation.types
  backtest
  scenario_lib)
 (preprocess
  (pps ppx_sexp_conv)))
