(library
 (name scenario_lib)
 (modules
  scenario
  universe_file
  fixtures_root
  smoke_catalog
  scenario_progress)
 (libraries core fpath weinstein.data_source backtest)
 (preprocess
  (pps ppx_sexp_conv)))

(executable
 (name scenario_runner)
 (modules scenario_runner)
 (libraries
  core
  core_unix
  fpath
  weinstein.data_source
  trading.simulation
  trading.simulation.types
  backtest
  scenario_lib)
 (preprocess
  (pps ppx_sexp_conv)))
