(library
 (name scenario_lib)
 (modules
  scenario
  universe_file
  universe_snapshot
  fixtures_root
  smoke_catalog
  scenario_progress)
 (libraries core fpath weinstein.data_source backtest universe status)
 (preprocess
  (pps ppx_sexp_conv)))

(executable
 (name scenario_runner)
 (modules scenario_runner)
 (libraries
  core
  core_unix
  fpath
  weinstein.data_source
  trading.simulation
  trading.simulation.types
  backtest
  backtest_all_eligible
  scenario_lib)
 (preprocess
  (pps ppx_sexp_conv)))
