(library
 (name scenario_snapshot_plan)
 (modules scenario_snapshot_plan)
 (libraries core backtest scenario_lib)
 (preprocess
  (pps ppx_jane)))

(library
 (name twin_detector)
 (modules twin_detector)
 (libraries core)
 (preprocess
  (pps ppx_jane)))

(executable
 (name build_scenario_snapshots)
 (modules build_scenario_snapshots)
 (libraries
  core
  core_unix
  core_unix.command_unix
  fpath
  status
  types
  csv
  scripts.bar_window
  backtest
  scenario_lib
  scripts.build_runner
  scenario_snapshot_plan
  twin_detector)
 (preprocess
  (pps ppx_jane)))
