(tests
 (names
  test_stop_log
  test_runner_filter
  test_trace
  test_trade_audit
  test_trade_audit_capture
  test_trade_audit_report
  test_trade_audit_ratings
  test_result_writer
  test_runner_hypothesis_overrides
  test_panel_loader_parity
  test_backtest_runner_args
  test_config_override
  test_comparison
  test_smoke_catalog
  test_gc_trace
  test_panel_runner_gc_trace
  test_release_perf_report
  test_determinism
  test_macro_trend_writer)
 (libraries
  ounit2
  core
  core_unix
  core_unix.filename_unix
  core_unix.sys_unix
  core_unix.time_ns_unix
  fpath
  backtest
  trade_audit_report
  trading.backtest.runner_args
  release_report
  scenario_lib
  weinstein.data_source
  weinstein.types
  trading.base
  trading.engine
  trading.portfolio
  trading.simulation
  trading.simulation.types
  trading.strategy
  weinstein_trading.strategy
  weinstein_trading.portfolio_risk
  weinstein.screener
  status
  matchers)
 (preprocess
  (pps ppx_sexp_conv ppx_deriving.eq ppx_deriving.show)))
